feat: support analyze Heavy-Duty Boots item