@@ -12,7 +12,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class PlayerStatus {
     private final Map<String, String> pokemonNickNameMap;
@@ -96,7 +95,7 @@ public class PlayerStatus {
     }
 
     public List<Side> getSideListByName(String name) {
-        return sideList.stream().filter(side -> side.name().equals(name)).collect(Collectors.toList());
+        return sideList.stream().filter(side -> side.name().equals(name)).toList();
     }
 
     public void changePokemonName(String nameBefore, String changeName) {
